--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second work</title>
+    <link rel="stylesheet" href="style.css"></link>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="Top-banner">
+        <div class="halfwidth">
+            <h1>Welcome To</h1>
+            <h1><span class="orange">Peter Parkar</span> Word</h1>
+            <h3>bBilding climver and train stoprer</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-tariqul-islam-50b6a9197/">Hire Me</a>
+        </div>
+        <div class="halfwidth">
+            <img src="images/jhankar.png" alt="">
+            
+        </div>
+    </section>
 </body>
 </html>
