--- a/index.html
+++ b/index.html
@@ -24,5 +24,17 @@
             
         </div>
     </section>
+    <section class="drembig">
+        <div class="halfwidth">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="halfwidth">
+            <h2>Dream Big</h2>
+            <h3>Become a webdeploper</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" href="" target="_blank">Download Resume</a>
+        </div>
+
+    </section>
 </body>
 </html>
