--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="Top-banner">
+    <section class="Top-banner flexible-container ">
         <div class="halfwidth">
             <h1>Welcome To</h1>
             <h1><span class="orange">Peter Parkar</span> Word</h1>
@@ -24,7 +24,7 @@
             
         </div>
     </section>
-    <section class="drembig">
+    <section class="drembig flexible-container">
         <div class="halfwidth">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -36,5 +36,23 @@
         </div>
 
     </section>
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div id="full" class="flexible-container">
+            <div class="experinceitem">
+                <h1>Full stack devloper</h1>
+                <h1 class="orange">20121 to |present</h1>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby" class="experinceitem">
+                <h1>baby developer</h1>
+                <h1 class="orange">20121 to |present</h1>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <h1>Cotract With Us</h1>
+    </footer>
 </body>
 </html>
